<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/x"
    tools:context=".UI.terciarios.clasificacion_terciarios">

    <RadioGroup
        android:id="@+id/RG_elecciones"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV_CompuestosClasificar">

        <RadioButton
            android:id="@+id/RB_Hidruros"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="0dp"
            android:button="?android:attr/textCheckMarkInverse"
            android:text="@string/HidrurosMetalicos"
            android:textColor="@color/text_color_primary"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="446dp" />

        <RadioButton
            android:id="@+id/RB_HidrurosNoMetal"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="0dp"
            android:button="?android:attr/textCheckMarkInverse"
            android:text="@string/HidrurosNoMetalicos"
            android:textColor="@color/text_color_primary"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="446dp" />

        <RadioButton
            android:id="@+id/RB_acidos"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="0dp"
            android:button="?android:attr/textCheckMark"
            android:text="@string/AcidoHidracido"
            android:textColor="@color/text_color_primary"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioButton
            android:id="@+id/RB_Halogenuro"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="0dp"
            android:button="?android:attr/textCheckMark"
            android:text="@string/Halogenurodeoxígeno"
            android:textColor="@color/text_color_primary"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/RB_OxidoNoMetal"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="0dp"
            android:button="?android:attr/textCheckMark"
            android:text="@string/OxidoDeNoMetal"
            android:textColor="@color/text_color_primary"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/RB_OxidoMetal"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="0dp"
            android:button="?android:attr/textCheckMark"
            android:text="@string/OxidoDeMetal"
            android:textColor="@color/text_color_primary"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/RB_SalNeutra"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="0dp"
            android:button="?android:attr/textCheckMark"
            android:text="@string/SalNeutraBinaria"
            android:textColor="@color/text_color_primary"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/RB_oxoacidos"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="0dp"
            android:button="?android:attr/textCheckMark"
            android:text="@string/oxoacidos"
            android:textColor="@color/text_color_primary"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/RB_hidroxidos"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="0dp"
            android:button="?android:attr/textCheckMark"
            android:text="@string/hidroxidos"
            android:textColor="@color/text_color_primary"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/RB_oxosales"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="0dp"
            android:button="?android:attr/textCheckMark"
            android:text="@string/oxosales"
            android:textColor="@color/text_color_primary"
            android:textSize="18sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/puntos"
        android:textColor="@color/text_color_primary"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/TV_GemasFin"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TV_CompuestosClasificar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compuesto"
        android:textColor="@color/text_color_primary"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.202" />

    <Button
        android:id="@+id/Btn_comprobar"
        android:layout_width="180dp"
        android:layout_height="102dp"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/zz"
        android:onClick="onClick"
        android:text="@string/comprobar"
        android:textColor="@color/text_color_primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RG_elecciones" />

    <TextView
        android:id="@+id/TV_GemasFin"
        android:layout_width="81dp"
        android:layout_height="61dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/gemas"
        android:gravity="center_vertical"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.878"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>