<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/vertical"
    tools:context=".UI.EleccionBinarioTerciarios">


    <Button
        android:id="@+id/Bt_personalizado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/button_border_reglas"
        android:padding="10dp"
        android:text="@string/CompuestosBinarios"
        android:textColor="@color/text_color_primary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Bt_terciario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@drawable/button_border_reglas"
        android:padding="10dp"
        android:text="@string/Terciarios"
        android:textColor="@color/primary_text_disable_only_material_dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/Bt_personalizado"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/Bt_personalizado"
        app:layout_constraintTop_toBottomOf="@+id/Bt_personalizado" />

    <Button
        android:id="@+id/Bt_BiTer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@drawable/button_border_formulacion"
        android:padding="10dp"
        android:text="@string/compuestosBiyTer"
        android:textColor="@color/negro"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/Bt_terciario"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/Bt_terciario"
        app:layout_constraintTop_toBottomOf="@+id/Bt_terciario" />

</androidx.constraintlayout.widget.ConstraintLayout>